WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268915
REGRESSION(
262334@main
): Fix leak of SecurityOrigin with postMessage
https://bugs.webkit.org/show_bug.cgi?id=268915
Summary
REGRESSION(262334@main): Fix leak of SecurityOrigin with postMessage
Loïc Yhuel
Reported
2024-02-07 07:14:29 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Loïc Yhuel
Comment 1
2024-02-07 07:20:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24003
Radar WebKit Bug Importer
Comment 2
2024-02-07 15:31:32 PST
<
rdar://problem/122501631
>
EWS
Comment 3
2024-02-09 12:57:19 PST
Committed
274382@main
(c4bb21451b14): <
https://commits.webkit.org/274382@main
> Reviewed commits have been landed. Closing PR #24003 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug