REGRESSION(262334@main): Fix leak of SecurityOrigin with postMessage https://bugs.webkit.org/show_bug.cgi?id=268915

Reviewed by Charlie Wolfe.

DOMWindow::createTargetOriginForPostMessage could return a new
SecurityOrigin with two refs.
It is only used with RefPtr, so we only need to have one ref.

* Source/WebCore/page/DOMWindow.cpp:
(WebCore::DOMWindow::createTargetOriginForPostMessage):

Canonical link: https://commits.webkit.org/274382@main